--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "build": "NODE_ENV=production webpack",
+    "build": "es5=true npx webpack-cli build",
     "watch": "npx webpack-cli watch",
-    "start": "webpack-dev-server"
+    "start": "NODE_ENV=development webpack serve"
   },
   "keywords": [],
   "author": "",
