--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "build": "es5=true npx webpack-cli build",
+    "build": "npx webpack-cli build",
     "watch": "npx webpack-cli watch",
-    "start": "NODE_ENV=development webpack serve"
+    "start": "webpack serve"
   },
   "keywords": [],
   "author": "",
@@ -24,7 +24,7 @@
     "pug-loader": "^2.4.0",
     "sass-loader": "^12.6.0",
     "url-loader": "^4.1.1",
-    "webpack": "^5.68.0",
+    "webpack": "^5.69.1",
     "webpack-cli": "^4.9.2",
     "webpack-dev-server": "^4.7.4",
     "webpack-watched-glob-entries-plugin": "^2.2.4"
@@ -34,5 +34,14 @@
     "jquery": "^3.6.0",
     "pug": "^3.0.2"
   },
-  "description": ""
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/SW-mori/myproject.git"
+  },
+  "bugs": {
+    "url": "https://github.com/SW-mori/myproject/issues"
+  },
+  "homepage": "https://github.com/SW-mori/myproject#readme",
+  "description": "",
+  "private": true
 }
