--- a/package.json
+++ b/package.json
@@ -42,6 +42,6 @@
     "url": "https://github.com/SW-mori/myproject/issues"
   },
   "homepage": "https://github.com/SW-mori/myproject#readme",
-  "description": "",
+  "description": "マークアップ練習用リポジトリ",
   "private": true
 }
