--- a/package.json
+++ b/package.json
@@ -3,8 +3,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "build": "npx webpack-cli build",
-    "watch": "npx webpack-cli --watch",
+    "build": "webpack --watch",
     "start": "webpack serve"
   },
   "keywords": [],
