--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
   },
   "dependencies": {
     "glob": "^7.2.0",
+    "image-webpack-loader": "^8.1.0",
     "jquery": "^3.6.0",
     "pug": "^3.0.2"
   },
