--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "@babel/preset-env": "^7.16.11",
     "babel-loader": "^8.2.3",
     "clean-webpack-plugin": "^4.0.0",
-    "css-loader": "^6.5.1",
+    "css-loader": "^6.7.1",
     "file-loader": "^6.2.0",
     "html-loader": "^3.1.0",
     "html-webpack-plugin": "^5.5.0",
@@ -22,6 +22,7 @@
     "node-sass": "^7.0.1",
     "pug-loader": "^2.4.0",
     "sass-loader": "^12.6.0",
+    "style-loader": "^3.3.1",
     "url-loader": "^4.1.1",
     "webpack": "^5.69.1",
     "webpack-cli": "^4.9.2",
@@ -32,7 +33,8 @@
     "glob": "^7.2.0",
     "image-webpack-loader": "^8.1.0",
     "jquery": "^3.6.0",
-    "pug": "^3.0.2"
+    "pug": "^3.0.2",
+    "slick-carousel": "^1.8.1"
   },
   "repository": {
     "type": "git",
